# record-maker

./: .gitignore  Cargo.toml  LICENSE  README.md
.agents/skills/issue-lifecycle/: SKILL.md
.github/workflows/: tauri-build.yml
crates/engine/: Cargo.toml
crates/engine/src/: data.rs  db.rs  layout.rs  lib.rs  model.rs  options.rs  path.rs  related.rs  schema.rs
crates/engine/src/layout/: groups.rs  objects.rs  part_rules.rs  parts.rs
crates/engine/src/migrations/: 0001_init_meta.sql  0002_layout_contract.sql  0003_object_content.sql  0004_default_header_footer_parts.sql  0005_deduplicate_singleton_parts.sql  0006_part_props.sql  0007_object_groups.sql  0008_schema_notes.sql  0009_value_lists.sql  0010_layout_position.sql  0011_layout_default_enabled.sql  0012_table_position.sql  0013_table_graph_pos.sql  0014_relationship_referential.sql  0015_object_parent.sql  0016_portal_row_count.sql  0017_layout_grid.sql
crates/server/: Cargo.toml
crates/server/src/: edit_sessions.rs  format.rs  lib.rs  main.rs  routes.rs  seed.rs  style.rs  tests.rs  validate.rs  viewmodel.rs
crates/server/src/routes/: browse.rs  design.rs  layouts.rs  records.rs  schema.rs
crates/server/templates/: _band.html  browse.html  design.html  edit.html  hello.html  index.html  layout.html  layouts.html  schema.html  shell.html  view_form.html  view_list.html  view_table.html
scripts/: build.sh  dev.sh  run.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
ui/scripts/: autoscroll-check.mjs  border-placement-check.mjs  build-icons.mjs  ctrlclick-repro.mjs  dense-transform-check.mjs  doc-check.mjs  grid-check.mjs  harness.mjs  marquee-check.mjs  monitor.mjs  parity-check.mjs  position-check.mjs  record-edit-check.mjs  size-check.mjs  transform-affordance-check.mjs  viewport-navigation-check.mjs
ui/src/: App.svelte  main.ts  vite-env.d.ts
ui/src/layouts/: CustomLayoutDrawer.svelte  DefaultViewsDrawer.svelte  LayoutManagerApp.svelte  NewLayoutDrawer.svelte  confirm.ts  layout-manager.css  main.ts  persist.ts
ui/src/lib/: Band.svelte  FieldSelect.svelte  Icon.svelte  Inspector.svelte  LayoutPreview.svelte  RailTools.svelte  RoutePicker.svelte  actions.ts  arrange.ts  border-sides.ts  canvas-edit.ts  clipboard.svelte.ts  create.ts  dnd.ts  doc.svelte.ts  echo.ts  format.ts  history.ts  interaction.ts  layout-editor.css  log.ts  model.ts  object-props.ts  part-rules.ts  persist.ts  table-columns.ts
ui/src/lib/canvas/: autoscroll.ts  clipboard-controller.ts  context.ts  gesture-lifecycle.ts  hover.ts  object-behavior.ts  placement.ts  press-intent.ts  smart-guides.ts  text-edit.ts  transform.ts  viewport-navigation.ts
ui/src/lib/inspector/: ArrangeSection.svelte  FormatSection.svelte  LayoutGridSection.svelte  ObjectSection.svelte  PartSection.svelte  PositionSection.svelte  SizeSection.svelte  StyleSection.svelte  TableColumnsSection.svelte  TextSection.svelte  geometry-commit.ts  inspector.css  part-kinds.ts  persist-ops.ts  position.ts  size.ts  values.ts
ui/src/schema/: FieldDrawer.svelte  FieldGrid.svelte  FieldRow.svelte  NoTablesEmpty.svelte  RelationshipDrawer.svelte  RelationshipsView.svelte  SchemaApp.svelte  SchemaDrawer.svelte  SchemaRelationshipEdge.svelte  SchemaTableNode.svelte  TableDrawer.svelte  TableList.svelte  TablesView.svelte  confirm.ts  fieldBadges.ts  main.ts  persist.ts  schema.css  store.svelte.ts  types.ts
ui/src/shared/: controls.css  field-kinds.ts  http.ts  tokens.css
ui/tests/: canvas.fixture.json  canvas.layout.html  canvas.parity.html
