[workspace]
resolver = "2"
members = ["crates/server", "crates/engine"]
# The Tauri desktop shell (#16) is EXCLUDED, not a member, because its deps
# (tauri 2 + Linux system libs: libwebkit2gtk-4.1-dev, libgtk-3-dev, …) are not
# installed yet. Excluding it keeps `cargo build` on the existing crates green.
#
# To promote it once the Tauri CLI + system libs are installed, make it a
# member instead of an exclude — one line:
#   members = ["crates/server", "crates/engine", "src-tauri"]
# and delete the `exclude` line below.
exclude = ["src-tauri"]
