[package]
name = "record-maker-server"
version = "0.1.0"
edition = "2021"
description = "Embedded axum server core — Browse Mode runtime + web-publish target"

[[bin]]
name = "record-maker-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
askama = "0.12"
