[package]
name = "record-maker-server"
version = "0.1.0"
edition = "2021"
description = "Embedded axum server — Browse Mode runtime + web-publish target"

[[bin]]
name = "record-maker-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs"] }
askama = "0.12"
anyhow = "1"
record-maker-engine = { path = "../engine" }
