[package]
name = "record-maker-server"
version = "0.1.0"
edition = "2021"
description = "Embedded axum server — Browse Mode runtime + web-publish target"

[lib]
name = "record_maker_server"
path = "src/lib.rs"

[[bin]]
name = "record-maker-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs"] }
askama = "0.12"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
# Already in the tree via axum's `json` feature, so this resolves from the lock
# without a new fetch. Used to read shape appearance keys out of `meta_object.props`.
serde_json = "1"
record-maker-engine = { path = "../engine" }

[dev-dependencies]
# `oneshot`-drive the router in tests without binding a port (tower is already
# in the tree via axum, so this resolves from the lock without new fetches).
tower = { version = "0.5", features = ["util"] }
